# kc

./: .gitignore  BUILD  Gopkg.toml  Makefile
cmd/kc/: BUILD.bazel  completion.go  get.go  logs.go  main.go  namespace.go  root.go  ssh.go  utils.go
pkg/cmd/: BUILD.bazel  completions.go  defaultfactory.go  factory.go  logs.go  namespace.go  run.go  ssh.go
